create form folder and form.html and form.scss form.js test OK

--- a/src/form/form.html
+++ b/src/form/form.html
@@ -6,9 +6,8 @@
     <title>Blog Javascript</title>
   </head>
   <body>
-    <a href="./form/form.html">Formulaire</a>
+    <a href="../">Accueil</a>
 
-    <script type="module" src="./index.js"></script>
+    <script type="module" src="./form.js"></script>
   </body>
 </html>
-•
