--- a/src/index.html
+++ b/src/index.html
@@ -7,12 +7,15 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wdth,wght@0,75..100,100..900;1,75..100,100..900&display=swap"
       rel="stylesheet"
     />
-    <title>Blog Javascript</title>
+    <title>Blog</title>
   </head>
   <body>
-    <a href="./form/form.html">Formulaire</a>
+    <div class="container">
+      <header>header</header>
+      <div class="content"></div>
+      <footer></footer>
+    </div>
 
     <script type="module" src="./index.js"></script>
   </body>
 </html>
-•
