mise en place du style du header et footer

--- a/src/index.html
+++ b/src/index.html
@@ -11,9 +11,19 @@
   </head>
   <body>
     <div class="container">
-      <header>header</header>
+      <header>
+        <a class="header-brand logo" href="./index.html">J.S Blog</a>
+        <ul>
+          <li>
+            <a href="./index.html" class="header-nav active">Accueil</a>
+          </li>
+          <li>
+            <a href="./form/form.html" class="header-nav">Créer un article</a>
+          </li>
+        </ul>
+      </header>
       <div class="content"></div>
-      <footer></footer>
+      <footer>© J.S Blog Tout droits reseré 2025 - Slim Abida</footer>
     </div>
 
     <script type="module" src="./index.js"></script>
