--- a/src/form/form.html
+++ b/src/form/form.html
@@ -3,11 +3,48 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Blog Javascript</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wdth,wght@0,75..100,100..900;1,75..100,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <title>Blog</title>
   </head>
   <body>
-    <a href="../">Accueil</a>
-
+    <div class="container">
+      <header>
+        <a class="header-brand logo" href="../index.html">J.S Blog</a>
+        <ul>
+          <li>
+            <a href="../index.html" class="header-nav">Accueil</a>
+          </li>
+          <li>
+            <a href="./form.html" class="header-nav active">Créer un article</a>
+          </li>
+        </ul>
+      </header>
+      <div class="content">
+        <form>
+          <h2 class="title-underline">Ajouter un article</h2>
+          <div class="form-group">
+            <label>Auteur</label>
+            <input type="text" name="author" />
+          </div>
+          <div class="form-group">
+            <label>Catégorie</label>
+            <input type="text" name="category" />
+          </div>
+          <div class="form-group">
+            <label>Article</label>
+            <textarea name="content"></textarea>
+          </div>
+          <div class="form-btn-container">
+          <button class="btn btn-secondary">Annuler</button>
+          <button class="btn bn-primary">Sauvegarder</button>
+          </div>
+        </form>
+      </div>
+    </div>
+    <footer>© J.S Blog Tout droits reseré 2025 - Slim Abida</footer>
     <script type="module" src="./form.js"></script>
   </body>
 </html>
