--- a/src/form/form.html
+++ b/src/form/form.html
@@ -37,6 +37,9 @@
             <label>Article</label>
             <textarea name="content"></textarea>
           </div>
+          <ul class="text-error" id="errors">
+
+          </ul>
           <div class="form-btn-container">
           <button class="btn btn-secondary">Annuler</button>
           <button class="btn bn-primary">Sauvegarder</button>
