mise en place de l'affichage de l'article dans l'accueil

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
     <div class="container">
       <header>
         <a class="header-brand logo" href="./index.html">J.S Blog</a>
+
         <ul>
           <li>
             <a href="./index.html" class="header-nav active">Accueil</a>
@@ -22,7 +23,31 @@
           </li>
         </ul>
       </header>
-      <div class="content"></div>
+      <div class="content">
+        <div class="articles-container">
+          <div class="article">
+            <img
+              src="https://randomuser.me/api/portraits/men/64.jpg"
+              alt="profile"
+            />
+            <h2>JavaScript histoire</h2>
+            <p class="article-author">Steve Green</p>
+            <p class="article-content">
+              JavaScript est un langage de programmation de scripts
+              principalement employé dans les pages web interactives et à ce
+              titre est une partie essentielle des applications web. Avec les
+              langages HTML et CSS, JavaScript est au cœur des langages utilisés
+              par les développeurs web[4]. Une grande majorité des sites web
+              l'utilisent[5] et la majorité des navigateurs web disposent d'un
+              moteur JavaScript[6] pour l'interpréter.
+            </p>
+            <div class="article-action">
+              <button class="btn btn-primary">Modifier</button>
+              <button class="btn btn-danger">Supprimer</button>
+            </div>
+          </div>
+        </div>
+      </div>
       <footer>© J.S Blog Tout droits reseré 2025 - Slim Abida</footer>
     </div>
 
