--- a/src/form/form.html
+++ b/src/form/form.html
@@ -12,7 +12,7 @@
   <body>
     <div class="container">
       <header>
-        <a class="header-brand logo" href="../index.html">J.S Blog</a>
+        <a class="header-brand logo" href="../index.html">Dev.Code</a>
         <ul>
           <li>
             <a href="../index.html" class="header-nav">Accueil</a>
@@ -30,19 +30,26 @@
             <input type="text" name="author" />
           </div>
           <div class="form-group">
+            <label>Image de profile</label>
+            <input type="text" name="img" />
+          </div>
+          <div class="form-group">
+            <label>Titre de l'article</label>
+            <input type="text" name="title" />
+          </div>
+          <div class="form-group">
             <label>Catégorie</label>
             <input type="text" name="category" />
           </div>
+
           <div class="form-group">
             <label>Article</label>
             <textarea name="content"></textarea>
           </div>
-          <ul class="text-error" id="errors">
-
-          </ul>
+          <ul class="text-error" id="errors"></ul>
           <div class="form-btn-container">
-          <button class="btn btn-secondary">Annuler</button>
-          <button class="btn bn-primary">Sauvegarder</button>
+            <button class="btn btn-secondary">Annuler</button>
+            <button class="btn bn-primary">Sauvegarder</button>
           </div>
         </form>
       </div>
