--- a/src/index.html
+++ b/src/index.html
@@ -7,26 +7,32 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wdth,wght@0,75..100,100..900;1,75..100,100..900&display=swap"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/1409399387.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Blog</title>
   </head>
   <body>
     <div class="container">
       <header>
         <a class="header-brand logo" href="./index.html">Dev.Code</a>
-
-        <ul>
-          <li>
-            <a href="./index.html" class="header-nav active">Accueil</a>
-          </li>
-          <li>
-            <a href="./form/form.html" class="header-nav">Créer un article</a>
-          </li>
-        </ul>
+        <div class="header-menu">
+          <ul>
+            <li>
+              <a href="./index.html" class="header-nav active">Accueil</a>
+            </li>
+            <li>
+              <a href="./form/form.html" class="header-nav">Créer un article</a>
+            </li>
+          </ul>
+          <div class="header-menu-icon">
+            <i class="fa-solid fa-bars"></i>
+          </div>
+        </div>
       </header>
       <div class="content">
-        <div class="articles-container">
-          
-        </div>
+        <div class="articles-container"></div>
       </div>
       <footer>© J.S Blog Tout droits reseré 2025 - Slim Abida</footer>
     </div>
