--- a/src/form/form.html
+++ b/src/form/form.html
@@ -7,20 +7,31 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wdth,wght@0,75..100,100..900;1,75..100,100..900&display=swap"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/1409399387.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Blog</title>
   </head>
   <body>
     <div class="container">
       <header>
         <a class="header-brand logo" href="../index.html">Dev.Code</a>
-        <ul>
-          <li>
-            <a href="../index.html" class="header-nav">Accueil</a>
-          </li>
-          <li>
-            <a href="./form.html" class="header-nav active">Créer un article</a>
-          </li>
-        </ul>
+        <div class="header-menu">
+          <ul>
+            <li>
+              <a href="../index.html" class="header-nav">Accueil</a>
+            </li>
+            <li>
+              <a href="./form.html" class="header-nav active"
+                >Créer un article</a
+              >
+            </li>
+          </ul>
+          <div class="header-menu-icon">
+            <i class="fa-solid fa-bars"></i>
+          </div>
+        </div>
       </header>
       <div class="content">
         <form>
