modifiction du titre du nom du site

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
       src="https://kit.fontawesome.com/1409399387.js"
       crossorigin="anonymous"
     ></script>
-    <title>Blog</title>
+    <title>Dev.Code</title>
   </head>
   <body>
     <div class="container">
